--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,15 @@
 nbproject
 
 # zend studio for eclipse project files
-.buildpath
-.project
-.settings
+#.buildpath
+#.project
+#.settings
 
 # windows thumbnail cache
 Thumbs.db
 
 # composer vendor dir
-##/vendor
+#/vendor
 
 # composer itself is not needed
 #composer.phar
@@ -24,7 +24,7 @@ Thumbs.db
 # phpunit itself is not needed
 phpunit.phar
 # local phpunit config
-/phpunit.xml
+#/phpunit.xml
 
 tests/_output/*
 tests/_support/_generated
